# ip_godovich

./: .gitignore  Makefile  Readme.md  db.sqlite3  docker-compose.yml  gunicorn_conf.py  pyproject.toml
.github/workflows/: linter_check.yml
conf/: settings.py  urls.py
docker/env/: .env
docker/nginx/: django.conf
rating/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rating/migrations/: 0001_initial.py  0002_comic_num_ratings_comic_total_rating.py
